--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,38 @@
  * Made By Joash Pereira
  * Thanks for MaterializeCSS.com
  */
+ #bgvid {
+
+position: fixed;
+
+top: 50%;
+
+left: 50%;
+
+min-width: 100%;
+
+min-height: 100%;
+
+width: auto;
+
+height: auto;
+
+z-index: -100;
+
+-webkit-transform: translateX(-50%) translateY(-50%);
+-moz-transform: translateX(-50%) translateY(-50%);
+-ms-transform: translateX(-50%) translateY(-50%);
+-o-transform: translateX(-50%) translateY(-50%);
+
+transform: translateX(-50%) translateY(-50%);
+
+background: url() no-repeat;
+
+background-size: cover;
+
+}
+ 
+ 
 
 .default_color{background-color: #2196F3 !important}
 
