--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@
  * Made By Joash Pereira
  * Thanks for MaterializeCSS.com
  */
- 
- 
 
-.default_color{background-color: #2196F3 !important}
 
-.default_color_text{color: #2196F3 !important}
+
+.default_color{background-color: #004d40 !important}
+
+.default_color_text{color: #004d40 !important}
 
 .icon-block {
     padding: 0 15px;
@@ -22,7 +22,7 @@
     min-height: 632px;
     max-height: 864px;
     position: relative;
-    background-color: #2196F3;
+    background-color: #004d40;
 }
 
 #nav_f{
@@ -50,20 +50,20 @@
 
 .text_h2 {font-weight: 100;margin-bottom: 4%; line-height: 4.5rem;}
 
-.span_h2 {font-weight: 300;color: #2196F3;}
+.span_h2 {font-weight: 300;color: #004d40;}
 
-.text_b{color: #2196F3;}
+.text_b{color: #004d40;}
 
 .in{font-weight: 400 !important; font-style: normal !important;}
 
 .promo i {
-    color: #2196F3;
+    color: #004d40;
     font-size: 7rem;
     display: block;
 }
-.card-content a {color: #2196F3;}
+.card-content a {color: #004d40;}
 
-.card-content a:hover {color: #2196F3;}
+.card-content a:hover {color: #004d40;}
 
 #work, #team{background: rgb(247, 247, 247);}
 
@@ -114,7 +114,7 @@ nav ul a {
 }
 
 .cd-headline.type .cd-words-wrapper.selected b {
-    color: #2196F3;
+    color: #004d40;
 }
 
 .cd-headline.type b {
